feat: unify the Vector API JEPs history